2004-12-23  James Tanis  <jtt@hawking.sysdetect.com>

	* lib/b_time.c (bk_time_iso_parse): Allow for silent failure if
	the user requests.

2004-12-22  Seth Robertson  <seth@blue.sysdetect.com>

	* lib/b_debug.c (bk_debug_iprint): If you enable bk_debug_iprint
	debugging, you will get microsecond debug message accuracy

2004-12-22  Alexander Dupuy  <dupuy@sysdetect.com>

	* src/Makefile (LDLIBS): reduce unnecessary library dependencies

2004-12-22  Seth Robertson  <seth@stevedore.StevesRUs.sysdetect.com>

	* include/libbk_net.h: Add OPCODES to ARP define

2004-12-21  Alexander Dupuy  <dupuy@sysdetect.com>

	* lib/b_ringdir.c: don't make ring files executable

2004-12-21  Seth Robertson  <seth@stevedore.StevesRUs.sysdetect.com>

	* include/libbk_net.h: Clarify what the dynamically sized arp header
	looks like so that you don't have to go to the reference manuals in
	order the use the structure.

2004-12-16  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_addrgroup.c (bk_net_init): Fix documentation: timeouts are
	actually in ms, not secs or usecs.

	* lib/b_netutils.c: Fix documentation: timeouts are actually in
	ms, not secs or usecs.

2004-12-15  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_exec.c (bk_fork_exec): Add function

2004-12-01  Brian Lindauer  <lindauer@nicks.sysdetect.com>

	* test/entropy/randtest.c (rt_end): Don't shadow new builtin cexp function.

2004-11-22    <jbl@localhost.localdomain>

	* include/libbk.h (BK_STRCMP): Added BK_STRCMP.

2004-11-12    <jbl@localhost.localdomain>

	* lib/b_ringdir.c (bk_ringdir_get_status): Added a settings file
	and an API to retrieve current buffer status.

2004-10-27  James Tanis  <jtt@fry.sysdetect.com>

	* lib/b_config.c (config_manage): Null values should be
	OK.

2004-10-25  James Tanis  <jtt@fry.sysdetect.com>

	* lib/b_string.c (bk_string_tokenize_split): Return an empty array
	instead of an array with one empty element when input string is
	empty.
